// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test badge example 1`] = `
"<div class=\\"example\\">
  <div class=\\"app-type\\">主题色徽标</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--default\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--primary\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--info\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--warning\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--success\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>0</span></span></transition-stub>
  </div>
  <div class=\\"app-type\\">圆点徽标</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__dot var-badge__dot--right\\"><span></span></span></transition-stub>
  </div>
  <div class=\\"app-type\\">自定义内容标签</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>badge</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>hot</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>66</span></span></transition-stub>
  </div>
  <div class=\\"app-type\\">最大值</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>88</span></span></transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger\\"><span>99+</span></span></transition-stub>
  </div>
  <div class=\\"app-type\\">不同定位徽标</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__position var-badge--right-top\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">右上</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__position var-badge--right-bottom\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">右下</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__position var-badge--left-top\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">左上</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__position var-badge--left-bottom\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">左下</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"app-type\\">是否显示徽标</div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--default var-elevation--2\\">
    <!--v-if-->
    <div class=\\"var-button__content\\">点击改变状态</div>
  </button>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--danger var-badge__position var-badge--right-top\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">徽标</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"app-type\\">自定义徽标颜色</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--right-top\\" style=\\"background: rgb(98, 0, 234);\\"><span>0</span></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">徽标</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
  <div class=\\"app-type\\">自定义徽标图标</div>
  <div class=\\"var-badge var--box\\">
    <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--right-top var-badge__icon\\" style=\\"background: rgb(98, 0, 234);\\"><i class=\\"var-icon var-icon--set var-icon-notebook\\" style=\\"transition: transform 0ms; font-size: 10px;\\"></i></span></transition-stub>
    <transition-stub><span class=\\"var-chip var--box var-chip--normal var--inline-flex var-chip--plain var-chip--plain-default\\" style=\\"color: rgb(0, 150, 136); border-color: #009688;\\"><span class=\\"var-chip--text-normal\\">徽标</span>
      <!--v-if--></span>
    </transition-stub>
  </div>
</div>"
`;

exports[`test badge position 1`] = `
"<div class=\\"var-badge var--box\\">
  <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--right-top\\"><span>0</span></span></transition-stub>
  <div style=\\"width: 100px; height: 30px;\\"></div>
</div>"
`;

exports[`test badge position 2`] = `
"<div class=\\"var-badge var--box\\">
  <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--right-bottom\\"><span>0</span></span></transition-stub>
  <div style=\\"width: 100px; height: 30px;\\"></div>
</div>"
`;

exports[`test badge position 3`] = `
"<div class=\\"var-badge var--box\\">
  <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--left-top\\"><span>0</span></span></transition-stub>
  <div style=\\"width: 100px; height: 30px;\\"></div>
</div>"
`;

exports[`test badge position 4`] = `
"<div class=\\"var-badge var--box\\">
  <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__position var-badge--left-bottom\\"><span>0</span></span></transition-stub>
  <div style=\\"width: 100px; height: 30px;\\"></div>
</div>"
`;

exports[`test badge style 1`] = `
"<div class=\\"var-badge var--box\\">
  <transition-stub><span class=\\"var-badge__content var-badge--default var-badge__icon\\" style=\\"background: rgb(98, 0, 234);\\"><i class=\\"var-icon var-icon--set var-icon-fire\\" style=\\"transition: transform 0ms; font-size: 10px;\\"></i></span></transition-stub>
</div>"
`;
